fix edu section small screen problem

--- a/css/custom.css
+++ b/css/custom.css
@@ -331,6 +331,7 @@ body{
 	.edu{
 		height:auto;
 	}
+
 	
 	
 }
@@ -391,8 +392,8 @@ body{
 .edu{
 	background-color:#CAEBF2;
 	width:100%;
-	height:100vh;
-	padding:80px;
+	//height:100vh;
+	padding:40px;
 
 }
 .eduText{
@@ -418,6 +419,7 @@ body{
 	border-radius:1.5em;
 	font-weight:bold;
 	font-size:1.5em;
+	margin-bottom:400px;
 }
 #resumeBtn{
 	//display:none;
